reajuste css, e scripts para pedidos

--- a/src/main/resources/static/_styles/tree.css
+++ b/src/main/resources/static/_styles/tree.css
@@ -89,7 +89,13 @@ ul.tree,
 }
 
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
+
+section {
+  display: block;
+  width: 100%;
+  clear: both;
+}
 
 .tree li h1 {
     position: relative;
